# ds4

./: .gitignore  Cargo.toml  README.md
crates/ds4-bench/: Cargo.toml
crates/ds4-bench/src/: args.rs  lib.rs  main.rs  runner.rs
crates/ds4-cli/: Cargo.toml
crates/ds4-cli/src/: args.rs  lib.rs  main.rs  repl.rs  transcript.rs
crates/ds4-cli/tests/: transcript_smoke.rs
crates/ds4-core/: Cargo.toml
crates/ds4-core/src/: api.rs  attn.rs  backend.rs  chat.rs  context_memory.rs  cpu_generate.rs  dequant.rs  dot.rs  engine.rs  ffn.rs  forward.rs  gguf.rs  half.rs  hc.rs  iq2_tables.rs  kv_cache.rs  layer.rs  layer_forward.rs  lib.rs  log.rs  matvec.rs  matvec_q.rs  model.rs  moe.rs  nn.rs  output_head.rs  quant.rs  rope.rs  sampler.rs  session.rs  shape.rs  think.rs  tokenizer.rs  tokens.rs  weights.rs
crates/ds4-core/src/backend/: cpu.rs
crates/ds4-core/src/tokenizer/: bpe.rs  byte_map.rs  mod.rs  pretok.rs
crates/ds4-core/tests/: forward_smoke.rs  gguf_parser.rs
crates/ds4-cuda/: Cargo.toml  build.rs
crates/ds4-cuda/src/: graph.rs  kernels.rs  launch.rs  lib.rs  runtime.rs
crates/ds4-metal/: Cargo.toml
crates/ds4-metal/src/: buffers.rs  encoder.rs  graph.rs  kernels.rs  lib.rs  runtime.rs
crates/ds4-server/: Cargo.toml
crates/ds4-server/src/: anthropic.rs  anthropic_messages.rs  anthropic_stream.rs  args.rs  disk_cache.rs  disk_cache_index.rs  endpoints.rs  http.rs  lib.rs  main.rs  openai.rs  queue.rs  stop.rs  stream.rs  tool_parser.rs  tools.rs
crates/rax/: Cargo.toml
crates/rax/src/: lib.rs  tree.rs
metal/: dsv4_misc.metal
scripts/: download_model.sh
speed-bench/: README.md
