[workspace]
resolver = "2"
members = [
    "crates/rax",
    "crates/ds4-core",
    "crates/ds4-cli",
    "crates/ds4-server",
    "crates/ds4-bench",
    "crates/ds4-metal",
    "crates/ds4-cuda",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["Salvatore Sanfilippo <antirez@gmail.com>", "DwarfStar 4 contributors"]
repository = "https://github.com/antirez/ds4"
description = "DeepSeek V4 Flash specific inference engine (Rust port)"

[workspace.dependencies]
rax              = { path = "crates/rax" }
ds4-core         = { path = "crates/ds4-core" }
ds4-metal        = { path = "crates/ds4-metal" }
ds4-cuda         = { path = "crates/ds4-cuda" }

# External
anyhow           = "1"
thiserror        = "1"
bytemuck         = { version = "1.14", features = ["derive"] }
half             = { version = "2.4", features = ["bytemuck"] }
memmap2          = "0.9"
parking_lot      = "0.12"
crossbeam        = "0.8"
crossbeam-channel = "0.5"
rayon            = "1.10"
log              = "0.4"
env_logger       = "0.11"
clap             = { version = "4", features = ["derive"] }
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
rustyline        = "14"
tokio            = { version = "1", features = ["full"] }
hyper            = { version = "1", features = ["server", "http1", "http2"] }
hyper-util       = { version = "0.1", features = ["tokio", "server"] }
http-body-util   = "0.1"
bytes            = "1"
futures          = "0.3"
ahash            = "0.8"
smallvec         = "1"
once_cell        = "1"
libc             = "0.2"
nix              = { version = "0.29", features = ["mman"] }
rand             = "0.8"
rand_xoshiro     = "0.6"
indexmap         = "2"

# macOS / Metal
objc2           = "0.5"
objc2-foundation = "0.2"
objc2-metal      = "0.2"
block2          = "0.5"

# Linux / CUDA. We rely on cudarc since it's pure Rust + dlopens libcudart.
cudarc          = { version = "0.12", features = ["cuda-12030", "cublas"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
strip = "symbols"

[profile.release-dbg]
inherits = "release"
debug = true
strip = "none"

[profile.bench]
opt-level = 3
lto = "thin"
