[package]
name = "ds4-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DwarfStar 4 microbenchmark harness."

[[bin]]
name = "ds4-bench"
path = "src/main.rs"

[features]
default = []
metal = ["ds4-core/metal"]
cuda  = ["ds4-core/cuda"]
cpu   = ["ds4-core/cpu"]

[dependencies]
ds4-core   = { workspace = true }
anyhow     = { workspace = true }
clap       = { workspace = true }
log        = { workspace = true }
env_logger = { workspace = true }
