[package]
name = "ds4-metal"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Metal backend for DwarfStar 4 (macOS only)."

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow      = { workspace = true }
thiserror   = { workspace = true }
bytemuck    = { workspace = true }
half        = { workspace = true }
parking_lot = { workspace = true }
log         = { workspace = true }
once_cell   = { workspace = true }
ahash       = { workspace = true }

# macOS-only Objective-C / Metal bindings.
[target.'cfg(target_os = "macos")'.dependencies]
objc2            = { workspace = true }
objc2-foundation = { workspace = true, features = [
    "NSString",
    "NSURL",
    "NSError",
] }
objc2-metal      = { workspace = true, features = [
    "MTLDevice",
    "MTLCommandQueue",
    "MTLCommandBuffer",
    "MTLCommandEncoder",
    "MTLComputeCommandEncoder",
    "MTLComputePipeline",
    "MTLLibrary",
    "MTLBuffer",
    "MTLResource",
    "MTLTypes",
    "MTLPipeline",
] }
block2           = { workspace = true }
