[package]
name = "ds4-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DwarfStar 4 HTTP server (OpenAI/Anthropic compatible API)."

[[bin]]
name = "ds4-server"
path = "src/main.rs"

[features]
default = []
metal = ["ds4-core/metal"]
cuda  = ["ds4-core/cuda"]
cpu   = ["ds4-core/cpu"]

[dependencies]
ds4-core   = { workspace = true }
rax        = { workspace = true }
anyhow     = { workspace = true }
clap       = { workspace = true, features = ["env"] }
log        = { workspace = true }
env_logger = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
tokio-stream = "0.1"
hyper      = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
bytes      = { workspace = true }
futures    = { workspace = true }
parking_lot = { workspace = true }
crossbeam-channel = { workspace = true }
ahash      = { workspace = true }
once_cell  = { workspace = true }
rand       = { workspace = true }
